--- a/http/scientific-6.8/ks.cfg
+++ b/http/scientific-6.8/ks.cfg
@@ -1,13 +1,17 @@
+# Required settings
+authconfig --enableshadow --passalgo=sha512
+keyboard us
+lang en_GB.UTF-8
+rootpw vagrant
+timezone Europe/London
+
+# Optional settings
 install
 cdrom
-lang en_US.UTF-8
-keyboard us
 network --onboot yes --device eth0 --bootproto dhcp --noipv6
 rootpw --plaintext vagrant
 firewall --enabled --service=ssh
-authconfig --enableshadow --passalgo=sha512
 selinux --disabled
-timezone Asia/Tokyo
 unsupported_hardware
 bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
 
@@ -23,8 +27,18 @@ firstboot --disabled
 reboot
 
 %packages --ignoremissing
-@core
-bzip2
+@Base
+@Core
+@Development Tools
+dkms
+gcc
+kernel-devel
+kernel-headers
+make
+nfs-utils
+openssh-clients
+perl
+sudo
 -ipw2100-firmware
 -ipw2200-firmware
 -ivtv-firmware
@@ -32,10 +46,10 @@ bzip2
 
 %post
 /usr/bin/yum -y install sudo
-/usr/sbin/groupadd -g 501 vagrant
-/usr/sbin/useradd vagrant -u 501 -g vagrant -G wheel
+/usr/sbin/groupadd -g 1000 vagrant
+/usr/sbin/useradd vagrant -u 1000 -g vagrant -G wheel
 echo "vagrant"|passwd --stdin vagrant
-echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
-chmod 0440 /etc/sudoers.d/vagrant
-echo 'Defaults:vagrant   !requiretty' >> /etc/sudoers
+echo 'Defaults:vagrant !requiretty' > /etc/sudoers.d/vagrant
+echo "vagrant ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+chmod 440 /etc/sudoers.d/vagrant
 %end
