Working on Scientific Linux VM

--- a/http/scientific-6.8/ks.cfg
+++ b/http/scientific-6.8/ks.cfg
@@ -8,21 +8,16 @@ timezone Europe/London
 # Optional settings
 install
 cdrom
-network --onboot yes --device eth0 --bootproto dhcp --noipv6
-rootpw --plaintext vagrant
+network --onboot=yes --device=eth0 --bootproto=dhcp --ipv6=auto
 firewall --enabled --service=ssh
 selinux --disabled
-unsupported_hardware
-bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
+bootloader --location=mbr
 
 text
 skipx
 zerombr
-
 clearpart --all --initlabel
 autopart
-
-auth  --useshadow  --enablemd5
 firstboot --disabled
 reboot
 
@@ -45,10 +40,9 @@ sudo
 %end
 
 %post
-/usr/bin/yum -y install sudo
-/usr/sbin/groupadd -g 1000 vagrant
-/usr/sbin/useradd vagrant -u 1000 -g vagrant -G wheel
-echo "vagrant"|passwd --stdin vagrant
+groupadd -g 1000 vagrant
+useradd vagrant -u 1000 -g vagrant -G wheel
+echo "vagrant" | passwd --stdin vagrant
 echo 'Defaults:vagrant !requiretty' > /etc/sudoers.d/vagrant
 echo "vagrant ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
 chmod 440 /etc/sudoers.d/vagrant
