Work complete on Scientific Linux VM

--- a/http/scientific-7.2/ks.cfg
+++ b/http/scientific-7.2/ks.cfg
@@ -1,41 +1,49 @@
+# Required settings
+authconfig --enableshadow --passalgo=sha512
+keyboard us
+lang en_GB.UTF-8
+rootpw vagrant
+timezone Europe/London
+
+# Optional settings
 install
 cdrom
-lang en_US.UTF-8
-keyboard us
-network --onboot yes --device eth0 --bootproto dhcp --noipv6
-rootpw --plaintext vagrant
+network --onboot=yes --device=eth0 --bootproto=dhcp --ipv6=auto
 firewall --enabled --service=ssh
-authconfig --enableshadow --passalgo=sha512
 selinux --disabled
-timezone Asia/Tokyo
-unsupported_hardware
-bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
+bootloader --location=mbr
 
 text
 skipx
 zerombr
-
 clearpart --all --initlabel
 autopart
-
-auth  --useshadow  --enablemd5
 firstboot --disabled
 reboot
 
 %packages --ignoremissing
-@core
-bzip2
+@Base
+@Core
+@Development Tools
+dkms
+gcc
+kernel-devel
+kernel-headers
+make
+nfs-utils
+openssh-clients
+perl
+sudo
 -ipw2100-firmware
 -ipw2200-firmware
 -ivtv-firmware
 %end
 
 %post
-/usr/bin/yum -y install sudo
-/usr/sbin/groupadd -g 501 vagrant
-/usr/sbin/useradd vagrant -u 501 -g vagrant -G wheel
-echo "vagrant"|passwd --stdin vagrant
-echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
-chmod 0440 /etc/sudoers.d/vagrant
-echo 'Defaults:vagrant   !requiretty' >> /etc/sudoers
+groupadd -g 1000 vagrant
+useradd vagrant -u 1000 -g vagrant -G wheel
+echo "vagrant" | passwd --stdin vagrant
+echo 'Defaults:vagrant !requiretty' > /etc/sudoers.d/vagrant
+echo "vagrant ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+chmod 440 /etc/sudoers.d/vagrant
 %end
