Fix network issue present in SL 7.2

--- a/http/scientific-7.2/ks.cfg
+++ b/http/scientific-7.2/ks.cfg
@@ -88,6 +88,7 @@ nfs-utils
 %end
 
 %post
+rm -f /etc/sysconfig/network-scripts/ifcfg-enp0s3
 # configure vagrant user in sudoers
 echo "%vagrant ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
 chmod 0440 /etc/sudoers.d/vagrant
