--- a/http/scientific-6.8/ks.cfg
+++ b/http/scientific-6.8/ks.cfg
@@ -27,10 +27,10 @@ user --name=vagrant --plaintext --password vagrant
 unsupported_hardware
 network --device eth0 --bootproto=dhcp
 firewall --disabled
-selinux --permissive
+selinux --disabled
 # The biosdevname and ifnames options ensure we get "eth0" as our interface
 # even in environments like virtualbox that emulate a real NW card
-bootloader --location=mbr --append="no_timer_check console=tty0 console=ttyS0,115200 net.ifnames=0 biosdevname=0"
+bootloader --location=mbr --append="no_timer_check console=tty0 console=ttyS0,115200 net.inames=0 biosdevname=0"
 text
 skipx
 zerombr
@@ -57,16 +57,6 @@ sudo
 nfs-utils
 -fprintd-pam
 -intltool
-# Selinux
-policycoreutils
-selinux-policy
-selinux-policy-targeted
-libselinux
-libselinux-utils
-libselinux-python
-# Workaround for selinux
--system-config-firewall-tui
-system-config-firewall-base
 
 # Microcode updates cannot work in a VM
 -microcode_ctl
