--- a/http/scientific-7.2/ks.cfg
+++ b/http/scientific-7.2/ks.cfg
@@ -27,7 +27,7 @@ user --name=vagrant --plaintext --password vagrant
 unsupported_hardware
 network --device eth0 --bootproto=dhcp
 firewall --disabled
-selinux --permissive
+selinux --disabled
 # The biosdevname and ifnames options ensure we get "eth0" as our interface
 # even in environments like virtualbox that emulate a real NW card
 bootloader --location=mbr --append="no_timer_check console=tty0 console=ttyS0,115200 net.ifnames=0 biosdevname=0"
@@ -57,7 +57,6 @@ dkms
 patch
 net-tools
 git
-# Core selinux dependencies installed on 7.x, no need to specify
 # Other stuff
 sudo
 nfs-utils
